--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
-    "next": "15.5.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "next": "^15.5.6",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
