--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,10 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
+    "icons": "^1.0.0",
     "lucide-react": "^0.546.0",
     "next": "15.5.6",
-    "react": "19.1.0",
+    "react": "^19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0"
   },
